--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     <div class="md:w-1/2">
                         <div class="relative">
                             <div class="absolute -inset-4 bg-primary/10 rounded-2xl transform rotate-3"></div>
-                            <img src="https://picsum.photos/seed/game1/600/400" alt="Minimalist game screenshot showing simple graphics with calming colors" class="relative rounded-xl shadow-lg w-full">
+                            <img src="img\1.jpg" alt="Minimalist game screenshot showing simple graphics with calming colors" class="relative rounded-xl shadow-lg w-full">
                         </div>
                     </div>
                 </div>
@@ -110,7 +110,7 @@
                     <div class="md:w-1/2">
                         <div class="relative">
                             <div class="absolute -right-4 -bottom-4 bg-primary/10 rounded-2xl w-full h-full"></div>
-                            <img src="https://picsum.photos/seed/team/600/700" alt="Game development team working in a minimalist office space" class="relative rounded-xl shadow-lg w-full">
+                            <img src="img\2.jpg" alt="Game development team working in a minimalist office space" class="relative rounded-xl shadow-lg w-full">
                         </div>
                     </div>
                     <div class="md:w-1/2 space-y-6">
